# GOST-R-34.10-2012

./: .gitignore  CMakeLists.txt
ext/signature_contest/: Makefile  Makefile.cf.linux  Makefile.defs  configure  sign_engine.h
ext/signature_contest/core/: Makefile  signature_contest.vcxproj  signature_contest.vcxproj.filters
ext/signature_contest/core/src/: load_dl.h  main.cpp
ext/signature_contest/core/src/linux/: load_dl.c
ext/signature_contest/core/src/windows/: load_dl.c  targetver.h
ext/signature_contest/workspaces/: signature_contest.sln
include/: curve.h  cyclic_array.h  elliptic_curve.h  naf.h  prime_field.h  sign_engine.h  signature.h
production/: curve.cpp  main.cpp
src/: curve.cpp  main.cpp  signature.cpp
test/: curve.cpp  main.cpp
verify/: .verify.sh.swp  verify.sh
